Update to new Swagger definition
