# pureport/swagger/model_supported_connection_group.go
@@ -1,0 +1,16 @@
+/*
+ * Pureport Control Plane
+ *
+ * Pureport API
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type SupportedConnectionGroup struct {
+	Href string `json:"href,omitempty"`
+	Id   string `json:"id,omitempty"`
+	Name string `json:"name"`
+}
